<?xml version="1.0"?>
<package format="2">
  <name>romi_soccer</name>
  <version>0.0.1</version>
  <description>The romi_soccer package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rice.rodriguez@ttu.edu">rice</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>joint_state_publisher</depend>
  <depend>nav_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>rqt_robot_steering</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>gazebo_ros_control</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
